--- a/glide.yaml
+++ b/glide.yaml
@@ -14,4 +14,7 @@ import:
   version: v0.23.1
 - package: github.com/spaolacci/murmur3
   version: master
+- package: github.com/golang/mock/gomock
+  version: master
+
 
