--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ profile.cov
 **/yarn-error.log
 /build/
 /cmd/ethermint/ethermint
+
+# ignore file
+/cmd/gelchain/gelchain.go
+/cmd/gelchain/testnet.go
