--- a/glide.yaml
+++ b/glide.yaml
@@ -5,7 +5,7 @@ import:
   repo:    git@github.com:green-element-chain/go-ethereum.git
   vcs:     git
 - package: github.com/tendermint/tendermint
-  version: xubing
+  version: develop
   repo:    git@github.com:green-element-chain/tendermint.git
   vcs:     git
 - package: github.com/herumi/mcl
@@ -16,10 +16,12 @@ import:
   version: master
   repo:    git@github.com:green-element-chain/bls.git
   vcs:     git
+- package: github.com/cosmos/cosmos-sdk
+  version: 1e26ba2e0e9c1e0457383ff302a97396c227cddb
+- package: github.com/tendermint/go-amino
+  version: v0.14.1
 - package: github.com/prometheus/prometheus
   version: v2.1.0
-- package: github.com/cosmos/cosmos-sdk
-  version: v0.23.1
 - package: github.com/spaolacci/murmur3
   version: master
 - package: github.com/golang/mock/gomock
