--- a/glide.yaml
+++ b/glide.yaml
@@ -9,17 +9,18 @@ import:
   repo:    git@github.com:green-element-chain/tendermint.git
   vcs:     git
 - package: github.com/herumi/mcl
-  version: master
+  version: fe95b63cc450bc1eb0459dda916a858b5442a258
   repo:    git@github.com:green-element-chain/mcl.git
   vcs:     git
 - package: github.com/herumi/bls
-  version: master
+  version: e9c72f18ab9bc09923da739151821cc588c0d295
   repo:    git@github.com:green-element-chain/bls.git
   vcs:     git
 - package: github.com/cosmos/cosmos-sdk
   version: 1e26ba2e0e9c1e0457383ff302a97396c227cddb
 - package: github.com/tendermint/go-amino
   version: dc14acf9ef15f85828bfbc561ed9dd9d2a284885
+#for test
 - package: github.com/spaolacci/murmur3
   version: master
 - package: github.com/golang/mock/gomock
