--- a/glide.yaml
+++ b/glide.yaml
@@ -25,3 +25,5 @@ import:
   version: master
 - package: github.com/golang/mock/gomock
   version: master
+- package: github.com/spf13/cobra
+  version: master
