--- a/docker/all/Dockerfile
+++ b/docker/all/Dockerfile
@@ -4,16 +4,16 @@ MAINTAINER webb.shi <bob.shi@energy-blockchain.com>
 ENV PATH /root/.go/bin:/root/go/bin:$PATH
 ENV GOPATH /root/go
 
-RUN cd /root/go/src/github.com/green-element-chain/ && \
-    git clone git@github.com:green-element-chain/gelchain.git && \
-    cd /root/go/src/github.com/green-element-chain/gelchain
+RUN cd /root/go/src/github.com/DTFN/ && \
+    git clone git@github.com:DTFN/gelchain.git && \
+    cd /root/go/src/github.com/DTFN/gelchain
 
-RUN cd /root/go/src/github.com/green-element-chain/gelchain/ && \
+RUN cd /root/go/src/github.com/DTFN/gelchain/ && \
     make bls_ubuntu
 
-RUN cd /root/go/src/github.com/green-element-chain/gelchain/ && \
+RUN cd /root/go/src/github.com/DTFN/gelchain/ && \
     make develop_ubuntu
 
-RUN cd /root/go/src/github.com/green-element-chain/gelchain/ && \
+RUN cd /root/go/src/github.com/DTFN/gelchain/ && \
     make develop_build
 
