rename dtfn in Dockerfile

--- a/docker/all/Dockerfile
+++ b/docker/all/Dockerfile
@@ -1,19 +1,19 @@
-FROM webbshi/gelchain-base
+FROM webbshi/dtfn-base
 MAINTAINER webb.shi <bob.shi@energy-blockchain.com>
 
 ENV PATH /root/.go/bin:/root/go/bin:$PATH
 ENV GOPATH /root/go
 
 RUN cd /root/go/src/github.com/DTFN/ && \
-    git clone git@github.com:DTFN/gelchain.git && \
-    cd /root/go/src/github.com/DTFN/gelchain
+    git clone git@github.com:DTFN/dtfn.git && \
+    cd /root/go/src/github.com/DTFN/dtfn
 
-RUN cd /root/go/src/github.com/DTFN/gelchain/ && \
+RUN cd /root/go/src/github.com/DTFN/dtfn/ && \
     make bls_ubuntu
 
-RUN cd /root/go/src/github.com/DTFN/gelchain/ && \
+RUN cd /root/go/src/github.com/DTFN/dtfn/ && \
     make develop_ubuntu
 
-RUN cd /root/go/src/github.com/DTFN/gelchain/ && \
+RUN cd /root/go/src/github.com/DTFN/dtfn/ && \
     make develop_build
 
